# new-qmsg

./: .gitignore  AUTHORS.md  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  build.sh  run.sh  slow-relay.Dockerfile  slowRun.sh
app-shell/: Cargo.toml
app-shell/examples/: ping.rs  pong.rs
app-shell/src/: main.rs
contrib/: CMakeLists.txt
contrib/googletest/: CMakeLists.txt
contrib/quicr/: CMakeLists.txt
doc/: api-net.md  api-ui.md  arch.md  notes.md  protocol.md  qapi.md
lib/qmsgEncoder/: CMakeLists.txt  README.md
lib/qmsgEncoder/include/qmsg/: data_buffer.h  encoder.h  encoder_orig copy.h  net_types.h  octet_string.h  qmsg_common.h  ui_types.h
lib/qmsgEncoder/src/: CMakeLists.txt  data_buffer.cpp  data_buffer.h  deserializer.cpp  deserializer.h  encoder.cpp  encoder_internal.cpp  encoder_internal.h  octet_string.cpp  octet_string.h  serializer.cpp  serializer.h
lib/slower/: CMakeLists.txt
lib/slower/include/: name.h  slower.h
lib/slower/src/: CMakeLists.txt  name.cxx  slower.cxx
src/netProc/: CMakeLists.txt  Network.cxx  Network.h  fakeSecProc.cxx  message_loop.cxx  message_loop.h  names.h  netProc.cxx
src/qmsg-core/: Cargo.toml
src/qmsg-core/examples/: mock-sec.rs  mock-ui.rs  ping.rs  pong.rs
src/qmsg-core/src/: events.rs  lib.rs  nonblocking.rs
src/secProc/: CMakeLists.txt  Cargo.toml  secProc.cxx
src/secProc/src/: intro.rs  intro_auth.rs  main.rs
src/slowNet/: CMakeLists.txt  secApi.cxx  secApi.h  slowNet.cxx
src/slowRelay/: CMakeLists.txt  Subscriptions.cxx  Subscriptions.h  cache.cxx  cache.h  slowRelay.cxx  subscription.cxx  subscription.h
src/slowSec/: CMakeLists.txt  netApi.cxx  netApi.h  slowSec.cxx  uiApi.cxx  uiApi.h
src/slowTest/: CMakeLists.txt  slowTest.cxx
src/slowUI/: CMakeLists.txt  secApi.cxx  secApi.h  slowUI.cxx
src/uiProc/: CMakeLists.txt  Channel.cxx  Channel.hh  FdReader.cxx  FdReader.hh  KeyBoardReader.cxx  KeyBoardReader.hh  Keyboard.cxx  Keyboard.hh  Parser.cxx  Parser.hh  Profile.cxx  Profile.hh  Receiver.cxx  Receiver.hh  Room.hh  Sender.cxx  Sender.hh  Team.cxx  Team.hh  UserInterface.cxx  UserInterface.hh  message_loop.cxx  message_loop.h  todo  ui.cxx  uiProc-old.cxx  uiProc.cxx
test/: CMakeLists.txt
test/lib/: CMakeLists.txt
test/lib/qmsgEncoder/: CMakeLists.txt  test_databuffer.cpp  test_qmsg_encoder.cpp
