[package]
name = "sec-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmsg-core = { version = "0.1.0", path = "../qmsg-core" }
"log" = "0.4"
"openmls" = "0.4.1"
"openmls_rust_crypto" = "0.1.0"
tls_codec = "0.2.0"
